--- a/UI/src/App.css
+++ b/UI/src/App.css
@@ -6,9 +6,8 @@
 }
 
 .home,
-.reports,
-.products,
-.sign-up {
+.aboutus,
+.login {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -16,7 +15,7 @@
   font-size: 3rem;
 }
 
-.reports {
+.aboutus {
   background-image: url('/images/img-2.jpg');
   background-position: center;
   background-size: cover;
@@ -25,16 +24,8 @@
   font-size: 100px;
 }
 
-.products {
-  background-image: url('/images/img-1.jpg');
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
 
-.sign-up {
+.login{
   background-image: url('/images/img-8.jpg');
   background-position: center;
   background-size: cover;
