--- a/UI/src/components/Button/Button.css
+++ b/UI/src/components/Button/Button.css
@@ -3,11 +3,26 @@
 }
 
 .btn {
-  padding: 8px 20px;
-  border-radius: 2px;
-  outline: none;
+  display: inline-block;
+  border-radius: 3px;
+  background-color: #5fd354;
   border: none;
+color: #FFFFFF;
+  text-align: center;
+  font-size: 25px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
   cursor: pointer;
+  margin: 5px;
+}
+
+.button1 span {
+   cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+  
 }
 
 .btn--primary {
@@ -27,11 +42,14 @@
 .btn--medium {
   padding: 8px 20px;
   font-size: 18px;
+  font-family:cursive;
 }
 
 .btn--large {
   padding: 12px 26px;
   font-size: 20px;
+  font-family:cursive;
+
 }
 
 .btn--large:hover,
