--- a/UI/src/components/Navbar/Navbar.css
+++ b/UI/src/components/Navbar/Navbar.css
@@ -1,13 +1,17 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    background: linear-gradient(90deg, rgb(219, 224, 220) 0%, rgb(26, 23, 23) 100%);
+    width: 100%;
+    height: 60px;
+    padding: 0 2em;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
     position: sticky;
     top: 0;
     z-index: 999;
+    border: none;
+    
   }
   
   .navbar-container {
@@ -27,6 +31,8 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+    width:50px;
+    height: 50px;
   }
   
   .fa-typo3 {
@@ -157,3 +163,4 @@
     }
   }
   
+ 
