changed about us page in UI

--- a/UI/src/components/Sections/Api.css
+++ b/UI/src/components/Sections/Api.css
@@ -3,23 +3,9 @@
     background: #fff;
   }
   
-  h1 {
-    text-align: center;
-  }
+
   
-  .cards__container {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    max-width: 1120px;
-    width: 90%;
-    margin: 0 auto;
-  }
-  
-  .cards__wrapper {
-    position: relative;
-    margin: 50px 0 45px;
-  }
+
   
   .cards__items {
     margin-bottom: 24px;
@@ -51,11 +37,7 @@
     overflow: hidden;
   }
   
-  .fade-img {
-    animation-name: fade-img;
-    animation-duration: 2s;
-  }
-  
+ 
   .cards__item__pic-wrap::after {
     content: attr(data-category);
     position: absolute;
@@ -99,11 +81,7 @@
     line-height: 24px;
   }
   
-  @media only screen and (min-width: 1200px) {
-    .content__blog__container {
-      width: 84%;
-    }
-  }
+
   
   @media only screen and (min-width: 1024px) {
     .cards__items {
@@ -116,4 +94,93 @@
       margin-bottom: 2rem;
     }
   }
-  
+
+h1{
+    margin: 23px 0px 0px 60px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 11ch;
+    color: rgb(189, 189, 189);
+}
+
+.column {
+    width: 250px;
+    height: 300px;
+    margin: 50px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    text-align:center;
+    box-shadow: 10px 10px 5px #ccc;
+    -moz-box-shadow: 10px 10px 5px #ccc;
+    -webkit-box-shadow: 10px 10px 5px #ccc;
+    -khtml-box-shadow: 10px 10px 5px #ccc;
+}
+.column .view {
+    background-color: #666666;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    opacity: 0;
+    width: 250px;
+    height: 300px;
+
+}
+
+
+
+.column:hover .view { opacity: 0.8; }
+.column .text {
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+}
+.column .name {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    opacity: 0;
+    transition-delay: 0.2s;
+    transition-duration: 0.3s;
+}
+
+
+
+.column:hover .name,
+.column:focus .name {
+    opacity: 1;
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+}
+h2.name.text{
+    font-size: 23px;
+    margin-top: 150px;
+}
+
+
+
+.title {
+    color: grey;
+}
+
+.row {
+    display: flex;
+    margin-left: 200px;
+}
+
+.row{
+    display: flex;
+}
+img{
+  height: 300px;
+  width: 250px;
+
+}
