--- a/UI/src/components/Sections/AbPage.css
+++ b/UI/src/components/Sections/AbPage.css
@@ -21,10 +21,10 @@
   }
 .about {
     padding: 80px 0;
-    background-image: url('/images/img-2.jpg');
+    background-image: url('/images/img-home.jpg');
   }
 .about h3 {
-  color: rgba(230, 218, 218, 0.7);
+  color: #d17878;
   font-size: 30px;
   margin-bottom: 12px;
   font-weight: 700;
