--- a/UI/src/components/Sections/Login.css
+++ b/UI/src/components/Sections/Login.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('/images/img-2.jpg');
+  background-image: url('/images/img-home.jpg');
 }
 .container {
   width: 100%;
@@ -7,11 +7,13 @@ body{
   flex-direction: column;
   align-items: center;
   
+  
 }
 
 .header {
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
+
   }
 .content {
     display: flex;
@@ -21,6 +23,7 @@ body{
 .image {
     width: auto;
     height: 70px;
+    
       
     }
 
