--- a/UI/src/components/Sections/Dash.css
+++ b/UI/src/components/Sections/Dash.css
@@ -12,11 +12,18 @@
   .panel-heading > .dropdown .dropdown-toggle {
     color: inherit;
   }
-  .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
+ .col-xs-3s{
     float: left;
   }
+  .col-xs-9{
+    margin-left: 70px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
   .huge {
-    font-size: 0px;
+    font-size: 50px;
+    margin-left :20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
   .panel-footer {
