--- a/UI/src/components/Sections/Api.css
+++ b/UI/src/components/Sections/Api.css
@@ -66,7 +66,9 @@ h1{
 
 
 
-.column:hover .view { opacity: 0.8; }
+.column:hover .view {
+   opacity: 0.8; 
+  }
 .column .text {
     -webkit-transition: all 300ms ease-out;
     -moz-transition: all 300ms ease-out;
@@ -108,9 +110,7 @@ h2.name.text{
     margin-left: 200px;
 }
 
-.row{
-    display: flex;
-}
+
 img{
   height: 300px;
   width: 200px;
